--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   get_it: ^7.6.4
+  go_router: ^12.1.3
+  lottie: ^2.7.0
   scroll_snap_list: ^0.9.1
   smooth_page_indicator: ^1.1.0
 
@@ -24,3 +26,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/lottie/
