--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   lottie: ^2.7.0
   scroll_snap_list: ^0.9.1
   smooth_page_indicator: ^1.1.0
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
