--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   get_it: ^7.6.4
   go_router: ^12.1.3
+  infinite_scroll_pagination: ^4.0.0
   lottie: ^2.7.0
   scroll_snap_list: ^0.9.1
   smooth_page_indicator: ^1.1.0
